# RsuDashboard

./: .gitignore  README.md  analytics.py  dashboard.py  pipeline.py  prebake_dashboard.py  pyproject.toml  requirements.txt  rsu.py  rsu_builder.py  rsu_loaders.py
src/qfrsu_dashboard/: analytics.py  rsu.py  rsu_builder.py  rsu_encoding.py  rsu_loaders.py
tests/: test_architecture_boundary.py  test_pipeline_cli.py  test_rsu_builder_percentiles.py  test_rsu_builder_reentry_categories.py  test_rsu_loaders_chunked.py
