[project]
name = "qfrsu-dashboard"
version = "0.1.0"
description = "Standalone RSU dashboard app consuming qfpytoolbox package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "qfpytoolbox",
  "streamlit",
  "plotly",
  "duckdb",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

